# greenwelt

./: .gitignore  CLAUDE.md  README.md  build.py  main.py  order_sentences.yaml  pyproject.toml  requirements.txt  web-build-fix.md
assets/: README.txt
data/: game.toml  map-readme.txt  map1_config.json  map1_locations.json  map1_orders.json  map1_roads.json  map2_config.json  map2_locations.json  map2_orders.json  map2_roads.json  order_sentences.yaml  pseudo-email.json  soundmap.yaml
docs/: greenwelt.apk  index.html  src.apk  staging.apk
docs/wintertime/: fish-animation.js  index.html  local-storage.js  star-animation.js  style.css  winter-animation.js
opengameart/: avatar.py
plan/: audio.txt  camera-mask.txt  map-order-emails copy.txt  map-order-emails.txt  map-zoom.txt  order-todo.txt  screen-size.txt
screens/: __init__.py
screens/dialog/: __init__.py  base_dialog.py  conversation.py  ui_renderer.py
screens/dialogs/: __init__.py  delivery_dialog.py  greenhouse.py  map_score_dialog.py  phone.py  (+4 more)
shared/: audio_manager.py  debug_log.py  debug_overlay.py  fullscreen.py  game_score.py  input_manager.py  shared_components.py
tests/: greenery_system.py  map_score_dialog.py  score_screen.py
tools/: audio_variance.py  generate_texts.py  generate_texts_specification.txt  map_marker.py  map_order.py  map_order.yaml  map_order_specification.txt  road_painter.py  wintertime_images.py  wintertime_images_modify.py
unsplash/: config.yaml  downloader.py  modify-characters.py  modify.py  rename.py  selected.json  selector.py
web/: index.html  js.js
(+26 files in other folders)
